--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
-<!DOCTYPE html>
 <html>
-<head> 
-	Staspuppy
-</head>
-<body>
+	<head>
+		<title>Stas</title>
+	</head>
 
-<h1>My First Heading</h1>
-
-<p>My first paragraph.</p>
-
-</body>
+	<body>
+	<center>
+			<p>
+				<h1>Welcome to StasPuppy - world's leading provider of pictures of StasPuppies!</h1>
+			</p>
+			<br>
+			<br>
+			<p>
+				<img src="img/2.jpeg">
+				<img src="img/1.jpeg">
+				<img src="img/3.jpeg">
+				<img src="img/4.jpeg">
+			</p>
+			<p>
+				<img src="img/5.jpeg">
+				<img src="img/6.jpeg">
+				<img src="img/8.jpeg">
+			</p>
+		</center>
+	</body>
 </html>
