--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
+	<head>
+		<title>Stas</title>
+	</head>
+
 	<body>
-		<center>
+	<center>
 			<p>
 				<h1>Welcome to StasPuppy - world's leading provider of pictures of StasPuppies!</h1>
 			</p>
