PUPPY FETCH PICTURE. PUPPY NOT REFRESH

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 			<br>
 			<br>
 			<p>
-				<h2> Want more StasPuppy? Click Refresh! </h2>
+				<h2> Want more StasPuppy? Click here! </h2>
 				<br>
 				<form>
-					<input type="button" onClick="history.go(0)" value="Refresh">
+					<input type="button" onClick="choosePic()" value="Get Random StasPuppy!">
 				</form>
 			</p>
 
