PUPPY GET TITLE

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+	<head>
+		<title>Welcome to StasPuppy.me!</title>
+	</head>
 	<body>
 	<center>
 			<p>
@@ -11,7 +14,7 @@
 			window.onload = choosePic;
 
 			var myPix = new Array("img/1.jpeg","img/2.jpeg","img/3.jpeg","img/4.jpeg","img/5.jpeg","img/6.jpeg","img/7.jpeg","img/8.jpeg");
-
+		
 			function choosePic() {
 				randomNum = Math.floor((Math.random() * myPix.length));
 				document.getElementById("myPicture").src = myPix[randomNum];
