--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<link type="text/css" rel="stylesheet" href="stylesheet.css" />
 		<title>Welcome to StasPuppy.me!</title>
 	</head>
 	<body>
@@ -8,6 +9,11 @@
 				<h1>Welcome to StasPuppy.me - world's leading provider of pictures of StasPuppies!</h1>
 			</p>
 			<br>
+			<p>
+				<h1>
+					<a href="http://www.path2usa.com/sponsoring-us-visa">Adopt a staspuppy!</a>
+				</h1>
+			</p>
 			<br>
 			<script type="text/javascript">
 			
@@ -32,6 +38,9 @@
 				<form>
 					<input type="button" onClick="choosePic()" value="Get Random StasPuppy!">
 				</form>
+
+				<br>
+
 			</p>
 
 		<!-- 	<p>
