PUPPY COMMENTS. PUPPY FETCH

--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
+<!--    
+
+   ,odOO"bo,
+ ,dOOOP'dOOOb,
+,O3OP'dOO3OO33,
+P",ad33O333O3Ob
+?833O338333P",d
+`88383838P,d38'
+ `Y8888P,d88P'
+   `"?8,8P"'
+    
+ 
+ PUPPY FETCH
+    
+-->
+
 <html>
 	<head>
 		<link type="text/css" rel="stylesheet" href="stylesheet.css" />
