FIXED PICTURES OF STAS PUPPIES TO STAS PUPPIES.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ P",ad33O333O3Ob
 	<body>
 	<center>
 			<p>
-				<h1>Welcome to StasPuppy.me - world's leading provider of pictures of StasPuppies!</h1>
+				<h1>Welcome to StasPuppy.me - world's leading provider of StasPuppies!</h1>
 			</p>
 			<br>
 			<p>
