FIXED GET MORE STASPUPPY TEST, BUTTON WITH MORE PERSONALITY

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@ P",ad33O333O3Ob
 			<br>
 			<br>
 			<p>
-				<h2> Want more StasPuppy? Click here! </h2>
+				<h2> Click the button below to get more beautiful pictures of adorable, perfect StasPuppies!</h2>
 				<br>
 				<form>
-					<input type="button" onClick="choosePic()" value="Get Random StasPuppy!">
+					<input type="button" onClick="choosePic()" value="MOAR StasPuppy!">
 				</form>
 
 				<br>
